improve button style and prevent result overflow

--- a/style.css
+++ b/style.css
@@ -11,10 +11,11 @@ html, body{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgb(180, 180, 180);
 
 }
 
-button{
+/* button{
     cursor: pointer;
     font-family: "Fredoka", sans-serif;
     font-optical-sizing: auto;
@@ -30,21 +31,96 @@ button{
     gap: 0px;
     margin: 0px;
     background-color: goldenrod;
-}
+} */
+
+.button-85 {
+    
+    /* padding: 0.6em 2em; */
+    border: none;
+    outline: none;
+    color: rgb(255, 255, 255);
+    /* background: #111; */
+    cursor: pointer;
+    position: relative;
+    font-family: "Fredoka", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
+    font-size: 50px;
+    z-index: 0;
+    border-radius: 10px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
+  
+  .button-85:before {
+    content: "";
+    background: linear-gradient(
+      45deg,
+      #ff0000,
+      #ff7300,
+      #fffb00,
+      #48ff00,
+      #00ffd5,
+      #002bff,
+      #7a00ff,
+      #ff00c8,
+      #ff0000
+    );
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing-button-85 20s linear infinite;
+    transition: opacity 0.3s ease-in-out;
+    border-radius: 10px;
+  }
+  
+  @keyframes glowing-button-85 {
+    0% {
+      background-position: 0 0;
+    }
+    50% {
+      background-position: 400% 0;
+    }
+    100% {
+      background-position: 0 0;
+    }
+  }
+  
+  .button-85:after {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #222;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+  }
+
 
 #calculator{
-    background-color: blueviolet;
+    background-color: rgb(143, 88, 196);
     display: flex; 
     flex-direction: column;
     border: 5px;
     border-radius: 3px;
-    padding: 3px;
+    padding: 10px;
 
 
 }
 
 #display{
-    width: 440px;
+    width: 450px;
     height: 80px;
     background-color: rgb(169, 174, 175);
     font-family: "Fredoka", sans-serif;
@@ -55,6 +131,13 @@ button{
     font-variation-settings: "wdth" 100;
     text-align: end;
     padding-right: 10px;
+    overflow: hidden;
+    white-space: nowrap;
+    box-sizing: border-box;
+}
+
+span{
+    display: inline-block;
 }
 
 
@@ -62,14 +145,15 @@ button{
     display: flex;
     flex-direction: row;
     margin: 5px; 
-    background-color: rgb(49, 32, 63);
+    padding-left: 5px;
+    background-color: rgb(58, 29, 82);
     
 
 }
 
 
 .number-buttons{
-    max-width: 307px;
+     max-width: 307px; 
     display: flex;
     padding: 0;
     margin: 5px;
@@ -79,11 +163,12 @@ button{
     
 }
 
-.operator-buttons{
+.operator-buttons {
     display: flex;
     flex-direction: column;
     gap: 3px;
     margin-top: 5px;
+    margin-left: -3px;
     
 }
 
@@ -99,16 +184,20 @@ button{
 
 }
 
-.operators{
+.operators, #operatorEval{
     width: 100px;
     height: 100px;
     border: 2px;
     border-style: solid;
     gap: 0px;
     margin: 0px;
-    background-color: goldenrod;
+    
+    
 }
 
+#operatorEval:after{
+    background: #333;
+}
 /* #number-0 {
     width: 203px;
 } */
